Glitch effect fixed on safari

--- a/Platform/src/styling/livestream.css
+++ b/Platform/src/styling/livestream.css
@@ -109,7 +109,6 @@ body {
   position: relative;
   max-width: 100%;
   min-height: 100%;
-  border: 2px solid red;
 }
 
 .timer {
